force-app/main/default/objects/EstadoCuenta__c/EstadoCuenta__c.object-meta.xml
<CustomObject>
    <description>Este objeto almacena el detalle de los estados de cuenta de los clientes.</description>
    <label>Estado de cuenta</label>
    <nameField>
        <label>Número de documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estados de cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>