force-app/main/default/objects/EstadoCuenta__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <description>Este campo genera la relación entre cuenta y Estado de cuenta</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estados de cuenta</relationshipLabel>
    <relationshipName>Estados_de_cuenta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>