force-app/main/default/objects/EstadoCuenta__c/fields/IMP_LlaveExclusiva__c.field-meta.xml
<CustomField>
    <fullName>IMP_LlaveExclusiva__c</fullName>
    <externalId>true</externalId>
    <label>Llave exclusiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>