force-app/main/default/objects/EstadoCuenta__c/fields/Prefijo__c.field-meta.xml
<CustomField>
    <fullName>Prefijo__c</fullName>
    <label>Prefijo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>