force-app/main/default/objects/EstadoCuenta__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Este campo almacena el valor del estado de cuenta</description>
    <label>Saldo total de factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>