force-app/main/default/objects/EstadoCuenta__c/fields/Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Vencimiento__c</fullName>
    <description>Este campo almacena la fecha de vecimiento</description>
    <label>Vencimiento</label>
    <type>Date</type>
</CustomField>